syntax = "proto3";

package register;
option go_package = "./register";

message Boolean {
    bool result = 1;
}

message RegisterReq {
    string taskId=1;
    string serviceType=2;
    string address=3;
}

service RegisterService {
    rpc Register(RegisterReq) returns (Boolean);
}