syntax = "proto3";

package via;
option go_package = "./via";

message Boolean {
    bool result = 1;
}

message SignupReq {
    string taskId=1;
    string partyId=2;
    string serviceType=3;
    string address=4;
}

service VIAService {
    rpc Signup(SignupReq) returns (Boolean);
}